--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -186,7 +186,7 @@ head
         color:#333;
       }
       .yet{
-       color:white;
+       #{yet}
       }
       .alreadyb{
       color:rgb(0, 0, 0);
@@ -251,8 +251,7 @@ head
        h5 small,
        h6 .small,
        h6 small {
-      color: white;
-      opacity: 0.68;
+      #{small}
       }
   body
     script.
@@ -352,10 +351,10 @@ head
         // Setting user books/movies counters
         var seenmovies = #{seenmovies};
         var newmovies = #{newmovies};
-        $('#moviesfigures').append(" "+newmovies+" <span style='color:rgb(0,0,0);opacity:0.3'> | "+seenmovies+"</span>");
+        $('#moviesfigures').append(" "+newmovies+" <span style='color:rgb(0,0,0);opacity:#{spanop}'> | "+seenmovies+"</span>");
         var readbooks = #{readbooks};
         var newbooks = #{newbooks};
-        $('#booksfigures').append(" "+newbooks+" <span style='color:rgb(0,0,0);opacity:0.3'> | "+readbooks+"</span>");
+        $('#booksfigures').append(" "+newbooks+" <span style='color:rgb(0,0,0);opacity:#{spanop}'> | "+readbooks+"</span>");
         //End of setting counters
         // Populating the columns
         var books = !{books};
