--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -220,7 +220,7 @@ head
           label
             input(type="checkbox" id='fourth' ) 
             span(class='glyphicon glyphicon-stop' style='font-size:30px;color:white;')
-            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#ddd;')
+            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:gray;')
         button(class='btn btn-default' id='changecolor' type='button') Change color
       .row(style='color:white;')
         .col-xs-12
