--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -279,7 +279,7 @@ head
           .row
             .col-xs-12(style='text-align:center;')
               h1(id='booksfigures' style='font-family:high;font-size:200px;font-weight:bold;color:#{bcl};')
-              button(class='btn btn-default addbookbutton' style='border-radius:30px;margin-bottom:20px;border:0px;color:white;background-color:rgba(255, 255, 255, 0.38);' type='button') Добавить книгу
+              button(class='btn btn-default addbookbutton' style='border-radius:30px;margin-bottom:20px;border:0px;color:white;background-color:#{addbook};' type='button') Добавить книгу
           .row.adding(id='addbook' style='display:none;padding-top:20px;')
             .col-xs-12
               .form-group
@@ -314,7 +314,7 @@ head
           .row
             .col-xs-12(style='text-align:center;')
               h1(id='moviesfigures' style='font-family:high;font-size:200px;font-weight:bold;color:#{mcl};')
-              button(class='btn btn-default addmoviebutton' style='border-radius:30px;margin-bottom:20px;border:0px;background-color:rgba(255, 255, 255, 0.38);color:white;' type='button') Добавить фильм
+              button(class='btn btn-default addmoviebutton' style='border-radius:30px;margin-bottom:20px;border:0px;background-color:#{addmovie};color:white;' type='button') Добавить фильм
           .row.adding(id='addmovie' style='display:none;padding-top:20px;')
             .col-xs-12
               .form-group
