--- a/views/listin.jade
+++ b/views/listin.jade
@@ -279,7 +279,7 @@ head
     .container(style='padding-left:84px;width:100% !important;padding-right:none;')  
       .row(style='background-color:darkgray;')
         .col-xs-12
-          h4(style='margin-top:0px;margin-bottom:0px;') #{mail}
+          h4(style='margin-bottom:0px;') #{mail}
           button(class='btn btn-success btn-xs' onclick='addfriend(#{uid})' style='border-radius:30px;margin-top:10px;margin-bottom:10px;' type='button') Add to friends
       #heightcheck.row
         .col-xs-6(id='books' style='background-color:#{bh};height:100%;overflow:auto;')
@@ -372,5 +372,42 @@ head
                       }
         };
         //end of sliding menu mechanics
+        function addfriend(to) {
+          if(!allowpubchange || currentstatus===to){
+            return;
+          }
+         allowpubchange =0;
+        request = new XMLHttpRequest();
+        request.onreadystatechange = function () {
+        var DONE = this.DONE || 4;
+        if (this.readyState === DONE){
+        parsed = JSON.parse(request.responseText);
+        console.log(parsed);
+        // do your job here
+        if (parsed.trouble === 1)
+        {
+         
+        }
+        else { 
+          if(to)
+          {alert('Your list is publicly avaliable');
+          $('#private').removeClass('active');
+          $('#public').addClass('active');
+          currnetstatus++}
+         else 
+          {alert('Your list is private');
+        $('#public').removeClass('active');
+          $('#private').addClass('active');
+          currnetstatus--}
+        allowpubchange=1;
+        }
+        }
+        };
+        request.open('POST', '/addfriend', true);
+        request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
+        request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+        // Most libraries like jQuery/Prototype/Dojo do this
+        request.send("uid=#{uid}&fid=#{fid}");
+          }
         
       
