--- a/views/listin.jade
+++ b/views/listin.jade
@@ -391,7 +391,7 @@ head
         }
         else { 
           $('#addfriendbutton').attr('disabled','true');
-          $('#addfriendbutton').text('в вашем списке')ж
+          $('#addfriendbutton').text('в вашем списке');
         allowadd=1;
         }
         }
