--- a/views/admin.jade
+++ b/views/admin.jade
@@ -67,6 +67,7 @@ head
             a(href="http://peopleandbooks.com/admin/userlist",class="list-group-item") Список пользователей
               span(class="badge") #{users}
             a(href="http://peopleandbooks.com/admin/userlist",class="list-group-item") Друзья пользователей
+              span(class="badge") #{friends}
         .col-xs-6(style='max-height:340px;overflow:auto;')
           ul(class='list-group', id='insertmessages')
             li(class='list-group-item active', style='background-color:#b0b0b0;border-color:#999999;') На повестке
