--- a/views/admin.jade
+++ b/views/admin.jade
@@ -66,7 +66,7 @@ head
             a(href="#",class="list-group-item active") Главная панель 
             a(href="http://peopleandbooks.com/admin/userlist",class="list-group-item") Список пользователей
               span(class="badge") #{users}
-            a(href="http://peopleandbooks.com/admin/userlist",class="list-group-item") Друзья пользователей
+            a(href="http://peopleandbooks.com/admin/friendlist",class="list-group-item") Друзья пользователей
               span(class="badge") #{friends}
         .col-xs-6(style='max-height:340px;overflow:auto;')
           ul(class='list-group', id='insertmessages')
