--- a/views/userlist.jade
+++ b/views/userlist.jade
@@ -92,6 +92,17 @@ head
             .panel-heading 
               | Пользователи
             table(class='table')
+              thead
+                th
+                  | Id
+                th
+                  | mail
+                th
+                  | Books
+                th 
+                  | Movies
+                th 
+                  | Regdate
               tbody
                 each user, i in doc
                   tr(id='row#{user.uid}')
@@ -106,7 +117,7 @@ head
                     td
                       | #{user.regdate.day}.#{user.regdate.month}.#{user.regdate.year}
                     td
-                      button(onclick='removeuser(#{user.uid})',class='btn btn-danger',type='button') Удалить 
+                      button(onclick='removeuser(#{user.uid})',class='btn btn-danger btn-xs',type='button') Удалить 
      
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
       script.
