--- a/views/people.jade
+++ b/views/people.jade
@@ -192,14 +192,14 @@ head
       script(async src='/js/bootstrap.min.js')
       script.
         var people = !{people};
-        //if(people){
-        //  people.forEach(function(element,index,array){
-        //    var insert= "<div class='row'><div class='col-xs-12'><h4 style='color:white;'><small>"+element.uid+"</small>"+element.mail+"</h4></div></div>";
-        //    $('#inserts').append(insert);
-        //  }
-        //}
+        if(people){
+          people.forEach(function(element,index,array){
+            var insert= "<div class='row'><div class='col-xs-12'><h4 style='color:white;'><small>"+element.uid+"</small>"+element.mail+"</h4></div></div>";
+            $('#inserts').append(insert);
+          }
+        }
         else {
-         $('#inserts').append("<h4 style='color:white'> Людей нет</h4>")ж
+         $('#inserts').append("<h4 style='color:white'> Людей нет</h4>");
         }
         // Sliding menu mechanics
         var counter =0;
