--- a/views/people.jade
+++ b/views/people.jade
@@ -193,10 +193,10 @@ head
       script.
         var people = !{people};
         if(people){
-          people.forEach(function(element,index,array){
-            var insert= "<div class='row'><div class='col-xs-12'><h4 style='color:white;'><small>"+element.uid+"</small>"+element.mail+"</h4></div></div>";
-            $('#inserts').append(insert);
-          }
+          //people.forEach(function(element,index,array){
+          //  var insert= "<div class='row'><div class='col-xs-12'><h4 style='color:white;'><small>"+element.uid+"</small>"+element.mail+"</h4></div></div>";
+          //  $('#inserts').append(insert);
+          //}
         }
         else {
          $('#inserts').append("<h4 style='color:white'> Людей нет</h4>");
