--- a/views/people.jade
+++ b/views/people.jade
@@ -196,20 +196,20 @@ head
         if(people){
           people.forEach(function(element,index,array){
             var rnum = index+1;
-            var insert= "<div class='row'><div class='col-xs-12'><h4 style='color:white;'><small style='margin-right:10px;'>"+rnum+"</small>"+element.mail;
+            var insert= "<div class='row'><div class='col-xs-12'><a href='http://peopleandbooks.com/lists/#{uid}'><h4 style='color:white;'><small style='margin-right:10px;'>"+rnum+"</small>"+element.mail;
              if(element.newb){
-              insert+="<span style='margin-right:20px;background-color:#ff4242;' class='badge'>"+element.totalbooks+"</span>/";
+              insert+="<span style='margin-left:20px;background-color:#ff4242;' class='badge'>"+element.totalbooks+"</span>/";
              }
              else {
-              insert+="<span style='margin-right:20px;' class='badge'>"+element.totalbooks+"</span>/";
+              insert+="<span style='margin-left:20px;' class='badge'>"+element.totalbooks+"</span>/";
              }
              if(element.newm){
-              insert+="<span style='margin-right:20px;background-color:#ff4242;' class='badge'>"+element.totalmovies+"</span>";
+              insert+="<span style='margin-left:20px;background-color:#ff4242;' class='badge'>"+element.totalmovies+"</span>";
              }
              else {
-              insert+="<span style='margin-right:20px;' class='badge'>"+element.totalmovies+"</span>";
+              insert+="<span style='margin-left:20px;' class='badge'>"+element.totalmovies+"</span>";
              }
-             insert+="</h4></div></div>";
+             insert+="</h4></a></div></div>";
             $('#inserts').append(insert);
           });
         }
