--- a/views/listin.jade
+++ b/views/listin.jade
@@ -280,7 +280,7 @@ head
       .row(style='background-color:darkgray;')
         .col-xs-12
           h4(style='margin-bottom:0px;') #{mail}
-          button(class='btn btn-success btn-xs' onclick='addfriend()' id='addfriendbutton' style='border-radius:30px;margin-top:10px;margin-bottom:10px;' type='button') Add to friends
+          #{button}
       #heightcheck.row
         .col-xs-6(id='books' style='background-color:#{bh};height:100%;overflow:auto;')
           .row
@@ -397,6 +397,36 @@ head
         }
         };
         request.open('POST', '/addfriend', true);
+        request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
+        request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+        // Most libraries like jQuery/Prototype/Dojo do this
+        request.send("uid=#{uid}");
+          }
+        var allowrem = 1;
+        function remfriend() {
+          if(!allowrem ){
+            return;
+          }
+         allowrem =0;
+        request = new XMLHttpRequest();
+        request.onreadystatechange = function () {
+        var DONE = this.DONE || 4;
+        if (this.readyState === DONE){
+        parsed = JSON.parse(request.responseText);
+        console.log(parsed);
+        // do your job here
+        if (parsed.trouble === 1)
+        {
+         
+        }
+        else { 
+          $('#remfriendbutton').attr('disabled','true');
+          $('#remfriendbutton').text('Removed');
+        allowrem=1;
+        }
+        }
+        };
+        request.open('POST', '/remfriend', true);
         request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
         request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
         // Most libraries like jQuery/Prototype/Dojo do this
