--- a/views/newemptyindexreg.jade
+++ b/views/newemptyindexreg.jade
@@ -288,12 +288,12 @@ head
       img(class="media-object img-circle" src="/images/pblogov4.png" style='position:absolute;opacity:0.2;left:88px;bottom:20px;width:64px;height:64px;' alt="...")
     .sidebar(style='width:74px;position:fixed;height:100%;background-color:#1d1d1d;text-align:center;z-index:2000;')
       //img(class="media-object img-circle" src="/bootstrap/images/seo.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
-      span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
+      span(class='glyphicon glyphicon-align-justify welcomebutton' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     #wrap 
       #welcome
           h2(style='color:white;') Welcome !
           h3(style='color:white;') Add a book or a movie
-          button(class='btn' id='welcomebutton' style='border-radius:30px;border:0px;color:white;background-color:rgba(255, 255, 255, 0.38);') Enter
+          button(class='btn welcomebutton' style='border-radius:30px;border:0px;color:white;background-color:rgba(255, 255, 255, 0.38);') Enter
       .container(style='padding-left:84px;width:100% !important;padding-right:none;')  
         #heightcheck.row
           .col-xs-6(id='books' style='background-color:#{bh};height:100%;overflow:auto;')
@@ -370,9 +370,11 @@ head
       script(async src='/js/bootstrap.min.js')
       script.
         //close welcom screen
-         $('#welcomebutton').click(function(){
-             $('#welcome').fadeOut();
+         $('.welcomebutton').click(function(){
+             if($('#welcome').css('display')==='block')
+             {$('#welcome').fadeOut();
              $('.container').css({'-webkit-filter':'blur(0px) brightness(1)','-o-filter':'blur(0px) brightness(1)','-moz-filter':'blur(0px) brightness(1)','filter':'blur(0px) brightness(1)'});
+             }
              });
         // Setting user books/movies counters
         var seenmovies = #{seenmovies};
