--- a/views/newemptyindexreg.jade
+++ b/views/newemptyindexreg.jade
@@ -469,6 +469,7 @@ head
                       }
         };
         $('.counter').click(function() {
+          console.log('container touch');
          if(counter)
           {
             counter=0;
