--- a/views/newemptyindexreg.jade
+++ b/views/newemptyindexreg.jade
@@ -468,7 +468,17 @@ head
                         break;
                       }
         };
-        $('.counter').click(function() {
+        $('#movies').click(function() {
+          console.log('container touch');
+         if(counter)
+          {
+            counter=0;
+            $('#showLeft').removeClass('active' );
+            $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
+            $('.container').css('-webkit-filter','brightness(1)');
+          }
+        });
+        $('#books').click(function() {
           console.log('container touch');
          if(counter)
           {
