--- a/views/about.jade
+++ b/views/about.jade
@@ -147,16 +147,7 @@ head
           -webkit-appearance:none;
       }
       a {
-        color:gray !important;
-      }
-      a:focus {
-        color:ornage !important;
-      }
-      a:active {
-        color:ornage !important;
-      }
-      a:hover {
-        color:ornage !important;
+        color:white !important;
       }
   body
     script.
