--- a/views/about.jade
+++ b/views/about.jade
@@ -161,6 +161,8 @@ head
            span(class='input-group-btn')
              button(class="btn btn-default" type="submit" id='searchbutton' style='padding-top:9px;padding-bottom:9px;background-color:#333;color:gray;border-color:#333;border-top-right-radius:30px;border-bottom-right-radius:30px;')
                span(class='glyphicon glyphicon-search') 
+      a(href='/') Мои списки
+      a(href='/people') Списки друзей
       a(href="/settings") Настройки
       a(href='/about') О проекте
       a(href="/logout") Выйти
