--- a/views/people.jade
+++ b/views/people.jade
@@ -145,23 +145,14 @@ head
           outline:0px !important;
           -webkit-appearance:none;
       }
-      a {
-        color:gray !important;
-      }
-      a:focus {
-        color:ornage !important;
-      }
-      a:active {
-        color:ornage !important;
-      }
-      a:hover {
-        color:ornage !important;
-      }
       .cont {
         margin-left:20px;
       }
       #inserts {
         padding-left:20px;
+      }
+      a {
+        color:white !important;
       }
   body
     script.
