--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -167,7 +167,7 @@ head
         color:#333;
       }
       .yet{
-       color:white;
+       #{yet};
       }
       .alreadyb{
       color:rgba(0, 0, 0, 0.27);
@@ -221,7 +221,7 @@ head
        h5 small,
        h6 .small,
        h6 small {
-      color: rgba(245, 245, 245, 0.68);
+      #{small}
       }
       .modpanel .btn{
         margin:10px;
@@ -246,12 +246,12 @@ head
       a(href="http://m.peopleandbooks.com/settings") Настройки
       a(href='http://m.peopleandbooks.com/about') О проекте
       a(href="http://peopleandbooks.com/logout") Выйти
-    .container( id='maincont' style='background-color:#52CA8F;overflow:auto;height:100%;padding-right:0px;padding-bottom:74px;')
+    .container( id='maincont' style='background-color:#{bh};overflow:auto;height:100%;padding-right:0px;padding-bottom:74px;')
       #booksrow.row
         #bookinsert.col-xs-12
           .row
             .col-xs-12(style='text-align:center;')
-              h1(id='booksfigures' style='font-family:high;font-size:100px;font-weight:bold;color:white;padding-right:20px;')
+              h1(id='booksfigures' style='font-family:high;font-size:100px;font-weight:bold;color:#{bcl};padding-right:20px;')
           #welcomeb.row(style='text-align:center;padding-right:20px;')
             .col-xs-12
               h2 Welcome !
@@ -263,7 +263,7 @@ head
         .col-xs-12
           .row
             .col-xs-12(style='text-align:center;')
-              h1(id='moviesfigures' style='font-family:high;font-size:100px;font-weight:bold;color:white;padding-right:20px;')
+              h1(id='moviesfigures' style='font-family:high;font-size:100px;font-weight:bold;color:#{mcl};padding-right:20px;')
           #welcomem.row(style='text-align:center;padding-right:20px;')
             .col-xs-12
               h2 Welcome !
@@ -273,7 +273,7 @@ head
           //add a smile here or something
     footer(class='footer')
       .container
-        .row(id='addbook' style='display:none;padding-top:20px;background-color:#378961;')
+        .row(id='addbook' style='display:none;padding-top:20px;background-color:#{bhl};')
           .col-xs-12
             .form-group
                 label(for="exampleInputEmail1") Название
@@ -301,7 +301,7 @@ head
                   a(style='background-color:#EFAF4F;' id='booksubmitbutton') Add
                 li(class="next")
                   a( class='addbookbutton' style='background-color:#999;') Close
-        .row(id='addmovie' style='display:none;padding-top:20px;background-color:#A03F39;')
+        .row(id='addmovie' style='display:none;padding-top:20px;background-color:#{mhl};')
           .col-xs-12
             .form-group
               label(for="exampleInputEmail1") Название
@@ -344,10 +344,10 @@ head
       // Setting user books/movies counters
         var seenmovies = #{seenmovies};
         var newmovies = #{newmovies};
-        $('#moviesfigures').append(" "+newmovies+" <span class='alreadym'> | "+seenmovies+"</span>");
+        $('#moviesfigures').append(" "+newmovies+" <span style='color:rgb(0,0,0);opacity:#{spanop}'> | "+seenmovies+"</span>");
         var readbooks = #{readbooks};
         var newbooks = #{newbooks};
-        $('#booksfigures').append(" "+newbooks+" <span class='alreadyb'> | "+readbooks+"</span>");
+        $('#booksfigures').append(" "+newbooks+" <span style='color:rgb(0,0,0);opacity:#{spanop}'> | "+readbooks+"</span>");
         //End of setting counters
       // Function for opening panel with remove/modify buttons
         function openmodpanel(bid) {
@@ -393,7 +393,7 @@ head
           $('#addbook').slideToggle();
          }
          $('#booksrow').fadeOut('400',function(){$('#moviesrow').fadeIn();});
-         $('#maincont').css('background-color','#CA5B52');
+         $('#maincont').css('background-color','#{mh}');
          $('.modpanel').css('display','none');
          $('.activebutton').removeClass('activebutton');
          $('#showmovies').addClass('activebutton');
@@ -404,7 +404,7 @@ head
           $('#addmovie').slideToggle();
          }
          $('#moviesrow').fadeOut('400',function(){$('#booksrow').fadeIn();});
-         $('#maincont').css('background-color','#52CA8F');
+         $('#maincont').css('background-color','#{bh}');
          $('.modpanel').css('display','none');
          $('.activebutton').removeClass('activebutton');
          $('#showbooks').addClass('activebutton');
