--- a/views/people.jade
+++ b/views/people.jade
@@ -27,6 +27,7 @@ head
       body {
       min-width:768px;
       background-color:#333;
+      font-family:roboto-thin;
       }
       .navbar-nav {
        float: right;
