--- a/views/about.jade
+++ b/views/about.jade
@@ -180,11 +180,16 @@ head
             small(style='margin-left:20px;') François Mauriac
       .row(style='color:#ccc;text-align:center;')
         .col-xs-4(style='border-right:1px solid gray;')
-          h4 List your books and movies
+          h4 
+            span(style='color:#ff00ab;') List
+            | your books and movies
         .col-xs-4(style='border-right:1px solid gray;')
-          h4 Share with friends and collegues
+          h4 
+            span(style='color:#ff9900;') Share
+            | with friends and collegues
         .col-xs-4
-          h4 Or keep it private
+          h4 Or keep it 
+            span(style='color:#00c9ff;') private
       .row(style='color:gray;')
         .col-xs-12
           a(href='http://topandviews.com')
